{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 311,
  "lineage": "007ebecb-c6f1-3675-fc46-772a4a77d618",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "skmt_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000aa26b054f3a383",
            "arn": "arn:aws:ec2:sa-east-1:381492310073:instance/i-0bcd4d453040620f8",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bcd4d453040620f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "esakamoto-aws4-sp-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02526f96b8b56956c",
            "private_dns": "ip-10-0-1-239.sa-east-1.compute.internal",
            "private_ip": "10.0.1.239",
            "public_ip": "177.71.205.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5275e9646719a6e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086809af45057ac1e",
            "tags": {
              "Name": "SKMT-EC2-Server",
              "SKMT-SystemManager": "true"
            },
            "tags_all": {
              "Name": "SKMT-EC2-Server",
              "SKMT-SystemManager": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c9a72d57e419f84"
            ]
          },
          "dependencies": [
            "aws_security_group.skmt_sg",
            "aws_subnet.skmt_public_subnet",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "smkt_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:381492310073:internet-gateway/igw-0b2eae97331b44697",
            "id": "igw-0b2eae97331b44697",
            "owner_id": "381492310073",
            "tags": {
              "Name": "smkt_igw"
            },
            "tags_all": {
              "Name": "smkt_igw"
            },
            "vpc_id": "vpc-048096a653d161701"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "skmt_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2eae97331b44697",
            "id": "r-rtb-00c3c7314b3b37c031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c3c7314b3b37c03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.smkt_igw",
            "aws_route_table.skmt_route_table",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skmt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:381492310073:route-table/rtb-00c3c7314b3b37c03",
            "id": "rtb-00c3c7314b3b37c03",
            "owner_id": "381492310073",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "skmt_route_table"
            },
            "tags_all": {
              "Name": "skmt_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-048096a653d161701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bec5bd457801c393",
            "route_table_id": "rtb-00c3c7314b3b37c03",
            "subnet_id": "subnet-086809af45057ac1e"
          },
          "dependencies": [
            "aws_route_table.skmt_route_table",
            "aws_subnet.skmt_public_subnet",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "skmt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:381492310073:security-group/sg-04c9a72d57e419f84",
            "description": "Security Group for SKMT VPC",
            "egress": [],
            "id": "sg-04c9a72d57e419f84",
            "ingress": [],
            "name": "skmt_sg",
            "name_prefix": "",
            "owner_id": "381492310073",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skmt_sg"
            },
            "tags_all": {
              "Name": "skmt_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-048096a653d161701"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3777834644",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04c9a72d57e419f84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1582361063",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04c9a72d57e419f84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "skmt_sg_rule_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2969378718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04c9a72d57e419f84",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.skmt_sg",
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skmt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:381492310073:subnet/subnet-086809af45057ac1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086809af45057ac1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492310073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skmt_public_subnet"
            },
            "tags_all": {
              "Name": "skmt_public_subnet"
            },
            "vpc_id": "vpc-048096a653d161701"
          },
          "dependencies": [
            "aws_vpc.skmt_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skmt_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:381492310073:vpc/vpc-048096a653d161701",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fceb697a756d1c73",
            "default_route_table_id": "rtb-0973dab99f6933ffd",
            "default_security_group_id": "sg-0d7468551c2a1a7f6",
            "dhcp_options_id": "dopt-0966ab807029faece",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-048096a653d161701",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0973dab99f6933ffd",
            "owner_id": "381492310073",
            "tags": {
              "Name": "skmt_vpc"
            },
            "tags_all": {
              "Name": "skmt_vpc"
            }
          }
        }
      ]
    }
  ]
}